Autodetection of OS on which Silverpeas is installed fix for bug #183
git-svn-id: https://www.silverpeas.org/svn/silverpeas/components/trunk@762 a8e77078-a1c7-4fa5-b8fc-53c5178a176c